--- a/TimesheetBackend/src/main/resources/templates/email/mail_notify_employee_details_to_employee.html
+++ b/TimesheetBackend/src/main/resources/templates/email/mail_notify_employee_details_to_employee.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
@@ -17,9 +22,10 @@
     </div>
     <div class="panel-body inf-content">
         <div class="row">
-            <div class="col-md-4">
-                <img alt="" style="width:300px;" title="" class="img-circle img-thumbnail isTooltip" th:src="|cid:${imageResourceName}|">
-            </div>
+<!--            <div class="col-md-4">-->
+<!--                <img alt="" style="width:300px;" title="" class="img-circle img-thumbnail isTooltip"-->
+<!--                     th:src="|cid:${imageResourceName}|">-->
+<!--            </div>-->
             <div class="col-md-6">
                 <div class="table-responsive mt-4">
                     <table class="table table-user-information">
@@ -134,7 +140,7 @@
                                 </strong>
                             </td>
                             <td class="text-primary">
-                                [[${employee.username}]]
+                                [[${username}]]
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +151,7 @@
                                 </strong>
                             </td>
                             <td class="text-primary">
-                                [[${employee.password}]]
+                                [[${password}]]
                             </td>
                         </tr>
                         </tbody>
